# CoolPotOS

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README-fr-FR.md  README-zh-CN.md  README.md  bochsrc.txt  build.bash  build.bat  build.py  build.sh  cpos.qcow2  format.sh  init.bash  linker.ld  xmake.lua
.github/workflows/: main.yml
apps/: Makefile  def.mk
apps/base_service/: Makefile  service.c
apps/cara/: Cargo.toml
apps/cara/.cargo/: config.toml
apps/cara/src/: main.rs
apps/include/: alloc.h  assert.h  cpos.h  ctype.h  image.h  iostream.hpp  libc.h  math.h  pl_readline.h  rand.h  signal.h  stb_image.h  stb_truetype.h  stdio.h  stdlib.h  string.h  syscall.h  time.h  ttfprint.h
apps/init/: Makefile  init.c  init.cpp
apps/lib_pl_readline/: Makefile  plreadln.c  plreadln_intellisense.c  plreadln_wordmk.c
apps/libs/: Makefile  alloc.c  image.c  libc.c  libcpp.cpp  math.c  print.c  scanf.c  string.c  syscall.asm  syscall.c  syscall.h  timer.c  ttfprint.c
apps/libs/alloc/: area.h  block.h  freelist.h  large-blk.h  mman.c  pool.c  sized-pool.c
apps/libutf/: Makefile  chartorune.c  isvalidrune.c  runestrcat.c  runestrchr.c  runestrcmp.c  runestrcpy.c  runestrdup.c  runestrecpy.c  runestrlen.c  runestrrchr.c  runestrstr.c  utflen.c
apps/lua/: Makefile  lualib.c
apps/lua/lua/: lapi.c  lauxlib.c  loslib.c  lua.h  luac.c  m.c
apps/phigrOS/: Makefile  csp_main.c
apps/rust/: .gitignore  Cargo.toml  Makefile  build.rs  i686-unknown-none.json
apps/rust/.cargo/: config.toml
apps/rust/src/: args.rs  binding.rs  file.rs  lib.rs  memory.rs
apps/shell/: Makefile  neofetch.c  shell.c
assets/: limine.conf  ovmf-code_x64.fd  readme.txt  rootfs.tar.xz  term.psf
assets/EFI/BOOT/: BOOTX64.EFI
assets/sys/: app.elf  readme.txt
boot/: boot.asm  boot.s  interrupt.asm  io.asm  nasmfunc.asm  thread.asm
data/: queue.c  stack.c
docs/: README.md
docs/en_us/: kernel_module.md  subsystem.md
docs/zh_cn/: kernel_module.md  subsystem.md
driver/: acpi.c  cmos.c  disk.c  floppy.c  ide.c  keyboard.c  pci.c  pcnet.c  vbe.c  vdisk.c  vga.c
drivers/: acpi.c  disk.c  fatfs.c  keyboard.c
fs/: fat.c  file.c  vfs.c
include/: acpi.h  arp.h  cmos.h  common.h  config.h  console.h  cpp.h  date.h  description_table.h  dhcp.h  disk.h  dma.h  dns.h  etherframe.h  fat.h  fat16.h  fatfs.h  file.h  floppy.h  gdt.h  graphics.h  ide.h  idt.h  io.h  isr.h  keyboard.h  kheap.h  list.h  memory.h  multiboot.h  net.h  pcat.h  pci.h  pcnet.h  printf.h  redpane.h  rtl8139.h  shell.h  socket.h  stack.h  (+6 more)
isodir/apps/: lua.elf  luac.elf  script.lua
isodir/boot/grub/: grub.cfg
isodir/sys/: UxImage  kernel.elf
kernel/: common.c  console.c  fat.c  fat16.c  gdt.c  idt.c  kernel.c  kheap.c  main.c  memory.c  multiboot2.c  page.c  redpane.c  syscall.c  task.c  thread.c  timer.c
libs/: alloc.h  os_terminal.h
libs/x86_64/: alloc.h  os_terminal.h  pl_readline.h
memory/: page.c  queue.c  stack.c
module/all_include/: cp_kernel.h  driver_subsystem.h  errno.h  fs_subsystem.h  int_subsystem.h  lock.h  mem_subsystem.h  proc_subsystem.h
module/all_include/types/: iso646.h  stdlib.h  stdnoreturn.h
module/e1000/: CMakeLists.txt  e1000.c  e1000.h  xmake.lua
module/extfs/: ext.c  ext.h  ext4_config.h  extfs.c  util.c  util.h  xmake.lua
module/hid/: hid.c  hid.h  xmake.lua
module/lwip/: xmake.lua
module/lwip/arch/: cc.h  sys_arch.c  utils.c  utils.h
module/nvme/: nvme.c  nvme.h  xmake.lua
module/xhci/: xhci_completion.c  xhci_events.c  xhci_hcd.c  xhci_hcd.h  xmake.lua
network/: arp.c  dhcp.c  etherframe.c  ipv4.c  net.c  pcnet.c  rtl8139.c  tcp.c  udp.c
readme/: README-fr-FR.md  README-ja-JP.md  README-zh-CN.md
src/arch/i386/: linker.ld
src/arch/riscv64/: librv64.c  linker.ld  main.c
src/arch/x86_64/: libx64.c  linker.ld  main.c
src/boot/: asmfunc.asm  boot.asm  graphics.asm  io.asm
src/core/: cpuid.c  df_asm.S  dlinker.c  error.c  error_handle.c  fpu.c  gdt.c  idt.c  main.c  module.c  syscall.c  timer.c  vdisk.c  vfs.c  vsound.c
src/core/cpu/: cpuid.c  empty_interrupt.c  gdt.c  idt.c  smp.c
src/core/mboot/: kernel_head.c  memory_map.c
src/core/mem/: bitmap.c  frame.c  heap.c  hhdm.c  page.c
src/core/memory/: free_page.c  kmalloc.c  page.c  (+1 more)
src/driver/: acpi.c  ahci.c  blk_device.c  cmos.c  devdisk.c  device.c  dma.c  gop.c  i2c.c  ide.c  iic.c  iic_core.c  keyboard.c  mouse.c  pci.c  pty.c  rtc.c  sb16.c  serial.c  smbios.c  terminal.c  timer.c  tty.c  urandom.c  vbe.c  vdisk.c  zero.c
src/fs/: devfs.c  fat.c  file.c  iso9660.c  pipfs.c  pivfs.c  tmpfs.c  vfs.c
src/include/: acpi.h  ahci.h  arp.h  atom_queue.h  bitmap.h  bmp.h  bootarg.h  cmos.h  common.h  cow_arraylist.h  cpuid.h  crc.h  ctype.h  ctypes.h  description_table.h  desktop.h  devdisk.h  devfs.h  device.h  elf.h  elf_util.h  errno.h  error.h  etherframe.h  fifo.h  fifo8.h  file.h  fpu.h  gop.h  graphics.h  hda.h  heap.h  hhdm.h  i2c.h  id_alloc.h  ide.h  iic.h  iic_core.h  intctl.h  io.h  (+74 more)
src/int/: intctl.c
src/kernel/: fifo.c  fpu.c  gdt.c  heap.c  idt.c  kernel.c  kheap.c  memory.c  page.c  pagehead.c  panic.c  proc.c  syscall.c  task.c  timer.c  tty.c
src/mem/: buddy.c  frame.c  memstat.c  page.c
src/mod/: module.c
src/network/: arp.c  dhcp.c  dns.c  etherframe.c  ipv4.c  net.c  pcnet.c  socket.c
src/sysapp/: desktop.c  panic.c  shell.c  soundtest.c
src/task/: scheduler.c  smp.c  task.c
src/term/: klog.c  kmesg.c  kprint.c  terminal.c
src/util/: bmp.c  bootarg.c  common.c  cow_arraylist.c  default_terminal.c  elf.c  elf_util.c  fifo8.c  font.c  id_alloc.c  ima_adpcm.c  klog.c  krlibc.c  lock_queue.c  map.c  mpmc_queue.c  printf.c  psf.c  rbtree.c  sem.c  sprintf.c  textmode.c  vbuffer.c
src/utils/: atom_queue.c  crc.c  klog.c  kprint.c  krlibc.c  lock_queue.c  queue.c  stb_impl.c
src/x86_64/: fuck-alloc.c  linker.ld  main.c
sysapp/: date.c  pcat.c  shell.c
syservice/: Makefile
syservice/kernel/: Makefile
syservice/userapp/: Makefile
util/: base.cpp  common.c  font.c  list.c  printf.c  rand.c
(+1168 files in other folders)
