[package]
name = "coolpotos-rust-sdk"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
strip = true
codegen-units = 1

[dependencies]
no_std_io = "0.6"
os-terminal = "0.3.7"

[dependencies.cara]
git = "https://github.com/zzjrabbit/caraint"
default-features = false
